Сделаны сетки для страницы catalog.html

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,6 @@
 @import "blocks/contacts.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
+@import "blocks/photos.scss";
+@import "blocks/photo.scss";
+@import "blocks/post.scss";
