--- a/source/css/style.css
+++ b/source/css/style.css
@@ -417,7 +417,7 @@ input[type="radio"].visually-hidden {
 .main-nav {
   position: relative;
   z-index: 2;
-  width: 320px;
+  width: 280px;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
@@ -582,7 +582,7 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
 }*/
 .promo__list {
-  width: 240px;
+  width: 200px;
   margin: 0 auto;
   margin-bottom: 25px;
   padding-left: 40px;
@@ -600,7 +600,7 @@ input[type="radio"].visually-hidden {
   outline: 1px solid white; }
 
 .promo__text {
-  width: 280px;
+  width: 240px;
   margin: 0 auto;
   padding-bottom: 25px;
   padding-left: 20px;
@@ -828,8 +828,8 @@ input[type="radio"].visually-hidden {
 
 .advantages__main-title {
   width: 230px;
-  padding-left: 45px;
-  padding-right: 45px;
+  padding-left: 25px;
+  padding-right: 25px;
   padding-bottom: 40px;
   margin: 0 auto;
   font-size: 24px;
@@ -863,7 +863,7 @@ input[type="radio"].visually-hidden {
   bottom: 0; }
 
 .advantages__item {
-  width: 320px;
+  width: 280px;
   margin: 0 auto;
   margin-bottom: 30px;
   outline: 1px solid red; }
@@ -1024,7 +1024,7 @@ input[type="radio"].visually-hidden {
     max-width: 570px; } }
 
 .reviews {
-  width: 320px;
+  width: 280px;
   margin: 0 auto;
   outline: 1px solid red; }
 
@@ -1326,3 +1326,467 @@ input[type="radio"].visually-hidden {
     height: 50px;
     border: 3px solid rgba(40, 54, 69, 0.1);
     border-radius: 50%; } }
+
+.photos {
+  width: 280px;
+  margin: 0 auto; }
+
+.photos__wrapper {
+  width: 100vw;
+  margin-left: calc(-100vw / 2 + 280px / 2);
+  margin-right: calc(-100vw / 2 + 280px / 2);
+  padding-top: 30px;
+  min-height: 175px;
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #2c3c4c; }
+
+.photos__title {
+  margin: 0 auto;
+  padding: 0;
+  color: #ffffff;
+  font-size: 24px;
+  line-height: 30px;
+  max-width: 200px;
+  font-weight: normal;
+  text-align: center; }
+
+.photos__text {
+  margin: 0 auto;
+  padding-top: 115px;
+  padding-bottom: 115px;
+  font-size: 14px;
+  text-align: center;
+  max-width: 280px;
+  outline: 1px solid red; }
+
+@media (min-width: 660px) {
+  .photos {
+    width: 280px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; } }
+  @media (min-width: 660px) and (min-width: 660px) {
+    .photos {
+      width: 620px;
+      padding-left: 20px;
+      padding-right: 20px; } }
+  @media (min-width: 660px) and (min-width: 960px) {
+    .photos {
+      width: 940px;
+      padding-left: 10px;
+      padding-right: 10px; } }
+
+@media (min-width: 660px) {
+  .photos__user {
+    width: 300px;
+    margin: 0;
+    margin-bottom: 20px;
+    background-color: #f2f2f2;
+    outline: 1px solid blue; }
+  .photos__user:nth-child(3) {
+    width: 100%; }
+  .photos__wrapper {
+    margin-left: calc(-100vw / 2 + 620px / 2);
+    margin-right: calc(-100vw / 2 + 620px / 2);
+    padding-top: 70px;
+    background-image: url("../img/index-background-tablet@1x.jpg");
+    min-height: 330px; }
+  .photos__title {
+    font-size: 50px;
+    line-height: 60px;
+    max-width: 400px; }
+  .photos__text {
+    max-width: 480px;
+    padding-left: 90px;
+    padding-right: 90px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    font-size: 18px; }
+  .photo__likes {
+    margin-bottom: auto; } }
+
+@media (min-width: 960px) {
+  .photos {
+    width: 940px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0 auto;
+    outline: 1px solid blue; }
+  .photos__wrapper {
+    margin-left: calc(-100vw / 2 + 940px / 2);
+    margin-right: calc(-100vw / 2 + 940px / 2);
+    background-image: url("../img/index-background-desktop@1x.jpg"); }
+  .photos__text {
+    max-width: 550px;
+    padding-left: 195px;
+    padding-right: 195px; } }
+
+.photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #f2f2f2;
+  width: 280px;
+  margin-bottom: 20px;
+  outline: 1px solid red; }
+
+.photo__wrapper {
+  position: relative;
+  width: 280px;
+  margin: 0 auto;
+  outline: 1px solid red; }
+
+.photo__panorama-text {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: #d22856;
+  color: #ffffff;
+  text-transform: uppercase;
+  z-index: 2; }
+
+.photo--main {
+  width: 100%;
+  background-color: #ffffff;
+  outline: 1px solid blue; }
+
+.photo__img {
+  display: block; }
+
+.photo__img--main {
+  width: 100vw;
+  max-width: 100vw;
+  margin-left: calc(-100vw / 2 + 280px / 2);
+  margin-right: calc(-100vw / 2 + 280px / 2);
+  height: 170px;
+  background-size: cover;
+  outline: 1px solid green; }
+
+.photo__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: 0;
+  font-size: 14px; }
+
+.photo__item--main {
+  width: 250px;
+  background-color: #f2f2f2;
+  margin: 0 auto; }
+
+.photo__author-name {
+  font-weight: bold;
+  font-style: normal; }
+
+.photo__time {
+  text-transform: uppercase; }
+
+.photo__likes {
+  margin: 0;
+  padding: 0;
+  color: #d22856;
+  text-transform: uppercase;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2; }
+
+.photo__text {
+  margin-top: 0;
+  margin-bottom: 15px;
+  padding: 0;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1; }
+
+@media (min-width: 660px) {
+  .photo {
+    width: 300px; }
+  .photo--main {
+    width: 100%; }
+  .photo__wrapper {
+    width: 620px; }
+  .photo__panorama-text {
+    top: 50px; }
+  .photo__img--main {
+    height: 500px;
+    margin-left: calc(-100vw / 2 + 620px / 2);
+    margin-right: calc(-100vw / 2 + 620px / 2); }
+  .photo__item--main {
+    width: 560px;
+    padding-left: 30px;
+    padding-right: 30px; }
+  .photo__likes {
+    margin-top: auto; }
+  .photo__item--main {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .photo__info--main {
+    width: 150px; }
+  .photo__likes--main {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    width: 150px; } }
+
+@media (min-width: 960px) {
+  .photo {
+    margin-bottom: 50px; }
+  .photo__wrapper {
+    width: 940px; }
+  .photo__item--main {
+    width: 880px; }
+  .photo__img--main {
+    margin-left: calc(-100vw / 2 + 940px / 2);
+    margin-right: calc(-100vw / 2 + 940px / 2); } }
+
+.post__text {
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  font-size: 14px;
+  text-align: center;
+  outline: 1px solid red; }
+  .post__text span {
+    display: block; }
+
+.post__done {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  background-color: #f2f2f2;
+  outline: 1px solid red; }
+
+.post__img {
+  display: block;
+  margin: 0 auto; }
+
+.post__filters-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 210px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  list-style: none;
+  outline: 1px solid red; }
+
+.post__icon {
+  opacity: 0.3; }
+
+.post__icon--choice {
+  opacity: 1;
+  fill: #d22856; }
+
+.post__controls {
+  position: relative;
+  width: 240px;
+  height: 2px;
+  background-color: #283645;
+  margin: 0 auto;
+  margin-bottom: 25px; }
+  .post__controls::before {
+    content: "";
+    position: absolute;
+    top: -7px;
+    right: 20px;
+    width: 12px;
+    height: 12px;
+    background-color: #f2f2f2;
+    border: 2px solid #d22856;
+    border-radius: 50%; }
+
+.post__controls--fill,
+.post__controls--crop,
+.post__controls--contrast {
+  display: none; }
+
+.post__link {
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid #d22856;
+  border-radius: 50px;
+  text-align: center;
+  margin-bottom: 12px;
+  font-size: 18px;
+  line-height: 20px;
+  color: rgba(40, 54, 69, 0.1);
+  font-weight: bold; }
+
+.post__link--active {
+  color: #d22856; }
+
+@media (min-width: 660px) {
+  .post__text {
+    width: 420px;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-size: 18px; }
+  .post__done {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .post__img {
+    margin-left: 0;
+    margin-right: 10px;
+    width: 300px; }
+  .post__done-info {
+    margin-left: 10px;
+    width: 300px; }
+  .post__filters-list {
+    margin: 0;
+    margin-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 260px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .post__controls {
+    width: 200px;
+    margin: 0;
+    display: none; }
+  .post__controls--fill,
+  .post__controls--crop,
+  .post__controls--contrast {
+    display: block; }
+  .post__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-right: 15px;
+    outline: 1px solid pink; }
+  .post__icon {
+    width: 22px;
+    height: 22px;
+    margin-right: auto;
+    outline: 1px solid red; }
+  .post__link {
+    width: 260px; }
+  .post__link--no-active {
+    margin-bottom: 0; } }
+
+@media (min-width: 960px) {
+  .post {
+    width: 280px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 1px solid blue; } }
+  @media (min-width: 960px) and (min-width: 660px) {
+    .post {
+      width: 620px;
+      padding-left: 20px;
+      padding-right: 20px; } }
+  @media (min-width: 960px) and (min-width: 960px) {
+    .post {
+      width: 940px;
+      padding-left: 10px;
+      padding-right: 10px; } }
+
+@media (min-width: 960px) {
+  .post__text {
+    width: 420px;
+    padding-left: 260px;
+    padding-right: 260px; }
+  .post__done {
+    width: 780px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    margin: 0 auto;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .post__img {
+    margin-right: 0;
+    width: 300px; }
+  .post__done-info {
+    width: 410px;
+    margin-left: 0; }
+  .post__filters-list {
+    width: 410px;
+    padding-left: 0;
+    padding-right: 0; }
+  .post__icon {
+    width: 44px;
+    height: 44px; }
+  .post__controls {
+    width: 290px; }
+  .post__item {
+    padding-right: 30px; }
+  .post__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .post__link {
+    display: inline-block;
+    width: 180px;
+    margin-bottom: 0; } }
