--- a/source/css/style.css
+++ b/source/css/style.css
@@ -672,8 +672,39 @@ input[type="radio"].visually-hidden {
     padding-right: 630px;
     padding-top: 50px; } }
 
-.page-main {
-  outline: 1px solid green; }
+.page-main__wrapper {
+  padding-top: 30px;
+  min-height: 175px;
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #2c3c4c; }
+
+.page-main__title {
+  max-width: 240px;
+  color: #ffffff;
+  font-size: 24px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  font-weight: normal; }
+
+@media (min-width: 660px) {
+  .page-main__wrapper {
+    background-image: url("../img/index-background-tablet@1x.jpg");
+    min-height: 260px; }
+  .page-main__title {
+    max-width: 520px;
+    font-size: 50px;
+    line-height: 60px; } }
+
+@media (min-width: 960px) {
+  .page-main__wrapper {
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    min-height: 220px; }
+  .page-main__title {
+    max-width: 770px; } }
 
 .tariffs {
   position: relative;
@@ -1256,7 +1287,24 @@ input[type="radio"].visually-hidden {
     height: 500px; } }
 
 .page-footer {
-  display: none; }
+  width: 280px;
+  margin: 0 auto;
+  outline: 1px solid red; }
+
+.page-footer__logo {
+  display: block;
+  width: 150px;
+  margin: 0 auto;
+  margin-bottom: 40px; }
+
+.page-footer__social {
+  width: 180px;
+  margin: 0 auto;
+  margin-bottom: 40px; }
+
+.page-footer__copyright {
+  font-size: 14px;
+  text-align: center; }
 
 @media (min-width: 660px) {
   .page-footer {
@@ -1275,8 +1323,7 @@ input[type="radio"].visually-hidden {
             justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    outline: 1px solid red; } }
+            align-items: center; } }
   @media (min-width: 660px) and (min-width: 660px) {
     .page-footer {
       width: 620px;
@@ -1290,9 +1337,11 @@ input[type="radio"].visually-hidden {
 
 @media (min-width: 660px) {
   .page-footer__logo {
-    width: 150px; }
+    width: 150px;
+    margin: 0; }
   .page-footer__social {
     width: 180px;
+    margin: 0;
     outline: 1px solid green; }
   .copywrite__text {
     padding: 0;
@@ -1310,22 +1359,21 @@ input[type="radio"].visually-hidden {
   .page-footer__copyright {
     width: 150px; } }
 
-@media (min-width: 660px) {
-  .social {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-  .social__item {
-    width: 50px;
-    height: 50px;
-    border: 3px solid rgba(40, 54, 69, 0.1);
-    border-radius: 50%; } }
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style: none;
+  padding: 0; }
+
+.social__item {
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(40, 54, 69, 0.1);
+  border-radius: 50%; }
 
 .photos {
   width: 280px;
@@ -1790,3 +1838,304 @@ input[type="radio"].visually-hidden {
     display: inline-block;
     width: 180px;
     margin-bottom: 0; } }
+
+.form__info {
+  width: 280px;
+  margin: 0 auto;
+  padding-top: 45px;
+  padding-bottom: 15px;
+  text-align: center;
+  font-size: 14px;
+  outline: 1px solid red; }
+
+.form__field {
+  padding-top: 30px;
+  padding-bottom: 20px;
+  width: 280px;
+  margin: 0 auto;
+  outline: 1px solid red; }
+
+.form__field--check,
+.form__field--radio {
+  width: 100%;
+  margin: 0;
+  background-color: #f2f2f2; }
+
+.form__label {
+  display: block;
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #d22856; }
+
+.form__section {
+  margin-bottom: 20px; }
+
+.form__section-check,
+.form__section-radio {
+  width: 280px;
+  margin: 0 auto;
+  padding-bottom: 45px;
+  outline: 1px solid red; }
+
+.form__text {
+  width: 100%;
+  height: 60px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-left: 20px;
+  border: 2px solid #e5e5e5; }
+
+.form__title {
+  width: 240px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #d22856;
+  outline: 1px solid red; }
+
+.form__comment {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 280px;
+  height: 180px;
+  padding-left: 20px;
+  padding-top: 20px;
+  border: 2px solid #e5e5e5; }
+
+.form__send {
+  width: 280px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #2aab6d;
+  border: none; }
+
+.form__note {
+  width: 280px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  padding: 0;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  outline: 1px solid red; }
+  .form__note span {
+    display: none; }
+
+.form__note sup {
+  color: #d22856; }
+
+@media (min-width: 660px) {
+  .form {
+    width: 280px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; } }
+  @media (min-width: 660px) and (min-width: 660px) {
+    .form {
+      width: 620px;
+      padding-left: 20px;
+      padding-right: 20px; } }
+  @media (min-width: 660px) and (min-width: 960px) {
+    .form {
+      width: 940px;
+      padding-left: 10px;
+      padding-right: 10px; } }
+
+@media (min-width: 660px) {
+  .form__info {
+    width: 490px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    padding-left: 85px;
+    padding-right: 85px;
+    font-size: 18px; }
+  .form__field {
+    width: 620px;
+    margin-bottom: 50px; }
+  .form__section--name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .form__label--name {
+    padding-left: 0;
+    padding-bottom: 0;
+    margin-right: 20px; }
+  .form__title {
+    width: 620px;
+    padding-left: 0;
+    padding-right: 0; }
+  .form__field--name {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .form__field--radio {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    background-color: #ffffff; }
+  .form__field--info {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    padding-left: 60px;
+    width: 560px; }
+  .form__field--check {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    background-color: #ffffff; }
+  .form__field--textarea {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5; }
+  .form__button-wrap {
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6; }
+  .form__section-check,
+  .form__section-radio {
+    width: 560px;
+    padding-left: 60px; }
+  .form__section--info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .form__label--info {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .form__text--info {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 20px; }
+  .form__comment {
+    width: 500px;
+    height: 200px;
+    display: block;
+    margin: 0 auto; }
+  .form__button-wrap {
+    width: 620px;
+    margin-bottom: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    outline: 1px solid red; }
+  .form__send {
+    width: 300px;
+    margin: 0; }
+  .form__note {
+    width: 200px;
+    margin: 0; } }
+
+@media (min-width: 960px) {
+  .form {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .form__info {
+    width: 760px;
+    padding-left: 100px;
+    padding-right: 100px; }
+  .form__field--name {
+    width: 435px;
+    padding-right: 35px; }
+  .form__field--radio {
+    width: 435px;
+    padding-left: 35px; }
+  .form__title {
+    width: auto;
+    padding-top: 0; }
+  .form__section-radio {
+    width: 365px;
+    padding-left: 70px;
+    padding-bottom: 24px; }
+  .form__field--info {
+    width: 820px;
+    padding-right: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .form__section--info {
+    width: 375px;
+    outline: 1px solid green; }
+  .form__field--check {
+    width: 820px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-right: 60px;
+    padding-left: 60px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .form__section-check {
+    width: 260px;
+    padding-left: 0;
+    margin: 0;
+    margin-bottom: 45px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+    .form__section-check:nth-child(2n) {
+      -webkit-box-ordinal-group: 0;
+          -ms-flex-order: -1;
+              order: -1; }
+    .form__section-check:nth-child(2), .form__section-check:nth-child(2+3) {
+      background-color: pink; }
+  .form__title--check {
+    width: 820px;
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2; }
+  .form__field--textarea {
+    width: 820px;
+    padding-right: 60px;
+    padding-left: 60px; }
+  .form__comment {
+    width: 820px;
+    height: 130px; }
+  .form__note {
+    width: 320px; }
+    .form__note span {
+      display: inline; }
+  .form__button-wrap {
+    width: 940px; } }
