--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,5 +1,22 @@
 .page-footer {
-  display: none;
+  width: 280px; 
+  margin: 0 auto;
+  outline: 1px solid red;
+}
+.page-footer__logo {
+  display: block;
+  width: 150px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+.page-footer__social {
+  width: 180px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+.page-footer__copyright {
+  font-size: 14px;
+  text-align: center;
 }
 @media (min-width: $tablet-width) {
   .page-footer {
@@ -10,13 +27,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    outline: 1px solid red;
   }
   .page-footer__logo {
     width: 150px;
+    margin: 0;
   }
   .page-footer__social {
     width: 180px;
+    margin: 0;
     outline: 1px solid green;
   }
   .copywrite__text {
