--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,38 @@
-.page-main {
-  outline: 1px solid green;
+.page-main__wrapper {
+  padding-top: 30px;
+  min-height: 175px;
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #2c3c4c;
+}
+.page-main__title {
+  max-width: 240px;
+  color: #ffffff;
+  font-size: 24px;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  font-weight: normal;
+}
+@media (min-width: $tablet-width) { 
+  .page-main__wrapper {
+    background-image: url("../img/index-background-tablet@1x.jpg");
+    min-height: 260px;
+  }
+  .page-main__title {
+    max-width: 520px;
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+@media (min-width: $desktop-width) { 
+  .page-main__wrapper {
+    background-image: url("../img/index-background-desktop@1x.jpg"); 
+    min-height: 220px;    
+  }
+  .page-main__title {
+    max-width: 770px;
+  }
 }
